Make user lists tolerant to deleted users